fix: invisible settings banner

--- a/src/controls/banners/settings.scss
+++ b/src/controls/banners/settings.scss
@@ -20,7 +20,6 @@
 	padding: 0;
 
 	position: relative;
-	top: var(--headerbar-height);
 	width: 100%;
 	max-width: unset;
 
